regex + erase field

--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,7 @@
 
       <div id="ip-in">
         <label>IP address:</label>    
-        <input type="text" id="ip" placeholder="192.168.1.1/24">
+        <input type="text" id="ip" onfocus="this.value=''" placeholder="192.168.1.1/24">
         <button  id="submit" >Calculer</button>
       </div>
     
